# homochecker-rs

./: .editorconfig  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: homochecker-rs.yml
migrations/: 20200312060000_create_users.sql
migrations/2020-03-12-055359_create_users/: down.sql  up.sql
src/: action.rs  api.rs  data.rs  domain.rs  filter.rs  homo.rs  lib.rs  main.rs  repository.rs  route.rs  service.rs
src/adapter/: avatar.rs  mod.rs  repository.rs  service.rs  url.rs  user.rs
src/api/: action.rs  data.rs  mod.rs  route.rs
src/repository/: avatar.rs  mod.rs  url.rs  user.rs
src/service/: homo.rs  mod.rs
src/validation/response/: header.rs  html.rs  mod.rs
tests/: avatar-fetching.rs  homo-request.rs  response-validation.rs  validation.rs
tests/fixture/: mastodon-user.json  twitter-intent.html
tests/support/: mod.rs
tests/support/container/: mod.rs  repository.rs  service.rs
