[package]
name = "homochecker-rs"
version = "0.1.0"
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.syn]
# version = "1.0"
#
# [dependencies.quote]
# version = "1.0"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.futures]
version = "0.3"

[dependencies.warp]
version = "0.2"

[dependencies.reqwest]
version = "0.10"

[dependencies.tokio-postgres]
version = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]
