[package]
name = "homochecker-rs"
version = "0.1.0"
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# Dependencies -----------------------------------------------------------------

# Language Support

[dependencies.async-trait]
version = "0.1"

[dependencies.regex]
version = "1.3"

[dependencies.lazy_static]
version = "1.4"

# Environment

[dependencies.dotenv]
version = "0.15"

# Log

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.4"

# Serde

[dependencies.serde]
version = "1.0"
features = ["derive"]

# Asynchronous

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.futures]
version = "0.3"

# Web

[dependencies.warp]
version = "0.2"

[dependencies.reqwest]
version = "0.10"

# Database

[dependencies.tokio-postgres]
version = "0.5"
