[package]
name = "homochecker-rs"
version = "0.1.0"
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

[[bin]]
name = "homochecker-rs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# Dependencies -----------------------------------------------------------------

# Language Support

[dependencies.async-trait]
version = "0.1"

[dependencies.regex]
version = "1.3"

[dependencies.lazy_static]
version = "1.4"

# Environment

[dependencies.dotenv]
version = "0.15"

# Log

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.4"

# Serde

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

# Asynchronous

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.futures]
version = "0.3"

# Web

[dependencies.http]
version = "0.2"

[dependencies.url]
version = "2.1"

[dependencies.idna]
version = "0.2"

[dependencies.warp]
version = "0.2"

[dependencies.reqwest]
version = "0.10"
features = ["json", "blocking"]

# Database

[dependencies.tokio-postgres]
version = "0.5"

[dependencies.redis]
version = "0.15"

# Development Dependencies -----------------------------------------------------

[dev-dependencies.ansi_term]
version = "0.12"

